try first strategy

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <td>Scissors</td>
     <td>Paper</td>
     <td>Rock</td>
-</tr><tr><td>Paper</td>
+</tr><tr><td>Jbrld</td>
 <td>1500</td>
 <td>0</td>
 <td>500</td>
@@ -22,7 +22,7 @@
 <td>0</td>
 <td>0</td>
 <td>500</td>
-</tr><td>Paper</td>
+</tr><td>Jbrld</td>
 <td>0</td>
 <td>0</td>
 <td>500</td>
@@ -42,7 +42,7 @@
 <td>500</td>
 <td>0</td>
 <td>0</td>
-</tr></table><br /><br /><br /><table><tr><td>#1|Paper</td><td>1500</td></tr>
+</tr></table><br /><br /><br /><table><tr><td>#1|Jbrld</td><td>1500</td></tr>
 <tr><td>#2|Rock</td><td>1500</td></tr>
 <tr><td>#3|Scissors</td><td>1500</td></tr>
 <tr><td><strong>Total</strong></td><td><strong>4500</strong></td></tr>
